- Fixed bug #45862 (get_class_vars is inconsistent with 'protected' and 'private' variables) - Added some tests

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@265257 c90b9560-bf6c-de11-be94-00142212c4b1